# my_projects

./: README.md  pyproject.toml  transacoes.csv
invest_control_v2/: historico_transacoes.csv  testing_report_lab.py
invest_control_v2/streamlit_app/: main.py  test.ipynb
invest_control_v2/streamlit_app/data/: historico_transacoes.csv
invest_control_v2/streamlit_app/data/historico_tesouro/: LFT_2025.xls  LTN_2025.xls  NTN-B_Principal_2025.xls  last_update.txt  tresury_history.py
invest_control_v2/streamlit_app/pages/: resultado.py  transactions.py
invest_control_v2/streamlit_app/utils/: asset_database.py  tools.py
investiment_control/: __init__.py  asset_database.py  classes.py  data_base.py  historico_transacoes.csv  investimentos_movimentacoes.csv  last_update.txt  test_functions.ipynb  test_yfinance.ipynb  testes.ipynb  tools.py  transactions.py  transition.ipynb  update_results.py
investiment_control/3_mass_sistem/: 2d_version.ipynb
investiment_control/historico_tesouro/: LFT_2024.xls  LFT_2025.xls  LTN_2024.xls  LTN_2025.xls  NTN-B_Principal_2024.xls  NTN-B_Principal_2025.xls  last_update.txt  tresury_history.py
investiment_control/legacy/: anbima_token.py
user_interface/: index.html  test.ipynb  testing_flask.py  testing_tkinter.py
