[project]
name = "my-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "reportlab>=4.4.0",
    "streamlit>=1.44.1",
    "xlrd>=2.0.1",
    "yfinance>=0.2.55",
]
